--- a/cms/assets/templates/header.html
+++ b/cms/assets/templates/header.html
@@ -331,7 +331,7 @@
                                 <div class="dropdown-divider"></div>
     
                                 <!-- item-->
-                                <a href="/adminlogout" class="dropdown-item notify-item">
+                                <a href="/logout" class="dropdown-item notify-item">
                                     <i class="fe-log-out"></i>
                                     <span>Logout</span>
                                 </a>
@@ -608,10 +608,10 @@
                                 <div class="collapse" id="sidebarAdmin">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="/adminlist">Admin List</a>
+                                            <a href="#">Admin List</a>
                                         </li>
                                         <li>
-                                            <a href="/addadmin">Add Admin</a>
+                                            <a href="#">Add Admin</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -620,16 +620,13 @@
                             <li>
                                 <a href="#sidebarClass" data-toggle="collapse">
                                     <i data-feather="feather"></i>
-                                    <span> Class </span>
+                                    <span> Users </span>
                                     <span class="menu-arrow"></span>
                                 </a>
                                 <div class="collapse" id="sidebarClass">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="/classcreate">Add Class</a>
-                                        </li>
-                                        <li>
-                                            <a href="/classlist">Class List</a>
+                                            <a href="#">User List</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -638,16 +635,16 @@
                             <li>
                                 <a href="#sidebarSubject" data-toggle="collapse">
                                     <i data-feather="book-open"></i>
-                                    <span> Subject </span>
+                                    <span> Event Type </span>
                                     <span class="menu-arrow"></span>
                                 </a>
                                 <div class="collapse" id="sidebarSubject">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="/subjectcreate">Add Subject</a>
+                                            <a href="#">Add Event Type</a>
                                         </li>
                                         <li>
-                                            <a href="/subjectlist">Subject List</a>
+                                            <a href="#">Event Type List</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -656,16 +653,16 @@
                             <li>
                                 <a href="#sidebarAdmitStudent" data-toggle="collapse">
                                     <i data-feather="users"></i>
-                                    <span> Students </span>
+                                    <span> Events </span>
                                     <span class="menu-arrow"></span>
                                 </a>
                                 <div class="collapse" id="sidebarAdmitStudent">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="/admitstudent">Admit Student</a>
+                                            <a href="#">Add Event</a>
                                         </li>
                                         <li>
-                                            <a href="/admitstudentlist">Student List</a>
+                                            <a href="#">Event List</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -674,19 +671,13 @@
                             <li>
                                 <a href="#sidebarTasks" data-toggle="collapse">
                                     <i data-feather="clipboard"></i>
-                                    <span> Tasks </span>
+                                    <span> Comments </span>
                                     <span class="menu-arrow"></span>
                                 </a>
                                 <div class="collapse" id="sidebarTasks">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="#">Student Task->Coming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Task Status->Coming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Task Review Status->Coming Soon</a>
+                                            <a href="#">Comments List</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -695,16 +686,13 @@
                             <li>
                                 <a href="#sidebarContacts" data-toggle="collapse">
                                     <i data-feather="book"></i>
-                                    <span> Contacts </span>
+                                    <span> User_Event Status </span>
                                     <span class="menu-arrow"></span>
                                 </a>
                                 <div class="collapse" id="sidebarContacts">
                                     <ul class="nav-second-level">
                                         <li>
-                                            <a href="#">Teacher List->Coming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Contact Teacher->Coming Soon</a>
+                                            <a href="#">Status</a>
                                         </li>
                                     </ul>
                                 </div>
