--- a/cms/assets/templates/user/eventsundereventtype.html
+++ b/cms/assets/templates/user/eventsundereventtype.html
@@ -33,7 +33,7 @@
                 <div class="col-10 col-lg-2 order-lg-1">
                     <div class="site-branding">
                         <div class="site-title">
-                            <a href="#"><img src="/static/images/logo.png" alt="logo"></a>
+                            <a href="/"><img src="/static/images/logo.png" alt="logo"></a>
                         </div><!-- .site-title -->
                     </div><!-- .site-branding -->
                 </div><!-- .col -->
@@ -60,7 +60,11 @@
 
                 <div class="col-lg-3 d-none d-lg-block order-2 order-lg-3">
                     <div class="buy-tickets">
-                        <a class="btn gradient-bg" href="#">Buy Tickets</a>
+                        {{if ne .SeUserID ""}}
+                        <a class="btn gradient-bg" href="/logout">Logout</a>
+                        {{else}}
+                        <a class="btn gradient-bg" href="/login">Buy Tickets</a>
+                        {{end}}
                     </div><!-- .buy-tickets -->
                 </div><!-- .col -->
             </div><!-- .row -->
@@ -107,15 +111,15 @@
         {{ range .AllEventUnderEventType}}
         <div class="col-12 col-lg-6 single-event">
             <figure class="events-thumbnail">
-                <a href="#"><img src="/static/images/event-3.jpg" alt=""></a>
+                <a href="/commentdetails/{{.ID}}"><img src="/static/images/event-3.jpg" alt=""></a>
             </figure>
 
             <div class="event-content-wrap">
                 <header class="entry-header flex justify-content-between">
                     <div>
-                        <h2 class="entry-title"><a href="#">{{ .EventName }}</a></h2>
+                        <h2 class="entry-title"><a href="/commentdetails/{{.ID}}">{{ .EventName }}</a></h2>
 
-                        <h1 class="entry-title"><a href="#">{{ .Description }}</a></h1>
+                        <h1 class="entry-title"><a href="/commentdetails/{{.ID}}">{{ .Description }}</a></h1>
 
                         <div class="event-location"><a href="#">{{ .Location}}</a></div>
 
