--- a/cms/assets/templates/user/eventtype.html
+++ b/cms/assets/templates/user/eventtype.html
@@ -60,7 +60,11 @@
 
                 <div class="col-lg-3 d-none d-lg-block order-2 order-lg-3">
                     <div class="buy-tickets">
-                        <a class="btn gradient-bg" href="#">Buy Tickets</a>
+                        {{if ne .SeUserID ""}}
+                        <a class="btn gradient-bg" href="/logout">Logout</a>
+                        {{else}}
+                        <a class="btn gradient-bg" href="/login">Buy Tickets</a>
+                        {{end}}
                     </div><!-- .buy-tickets -->
                 </div><!-- .col -->
             </div><!-- .row -->
